examples/test/testpolicy16464.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16464
  namespace: namespace461
spec:
  podSelector:
    matchLabels:
      key0: value23
      key37: value45
      key49: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value19
          key11: value39
      podSelector:
        matchLabels:
          key10: value28
          key20: value47
          key38: value42
